src/objects/Itinerary_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Solution_Preference__c</fullName>
        <label>Solution Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Risk__c</fullName>
        <label>Solution Risk</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positioning on leg one may only be 60 minutes prior because floating fleet</fullName>
                </value>
                <value>
                    <fullName>Positioning on leg one may only be 60 minutes prior because aircraft is based at another airport</fullName>
                </value>
                <value>
                    <fullName>Aircraft will not be staying with you for the duration of the trip so you may not be able to leave early</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Status__c</fullName>
        <label>Solution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Owner Denied</fullName>
                </value>
                <value>
                    <fullName>On Hold for Non-AvP Client</fullName>
                </value>
                <value>
                    <fullName>Pending Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>No Longer Available</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Recovery Available</fullName>
                </value>
                <value>
                    <fullName>Recovery Unavailable</fullName>
                </value>
                <value>
                    <fullName>Recovery Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled - Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Trip_Type__c</fullName>
        <label>Solution Trip Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-Way</fullName>
                </value>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
                <value>
                    <fullName>Same-Day Round Trip</fullName>
                </value>
                <value>
                    <fullName>Multi-Segment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Cancellation_Terms__c</fullName>
        <formula>Operator__r.Standard_Cancellation_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Cancellation Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontracted__c</fullName>
        <label>Sub-Contracted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tail_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tail Number</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Itinerary Solutions</relationshipLabel>
        <relationshipName>Itinerary_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trip_End_Date__c</fullName>
        <label>Trip End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_Manager_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trip Manager Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Itinerary Solutions</relationshipLabel>
        <relationshipName>Itineraries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trip_Start_Date__c</fullName>
        <label>Trip Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_Type__c</fullName>
        <formula>TEXT(Trip_Manager_Number__r.Trip_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trip Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_Downgrade__c</fullName>
        <formula>IF(Conversion_Rate__c &lt; 1, &quot;Downgrade&quot;, &quot;Upgrade&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upgrade/Downgrade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_for_Price_Difference__c</fullName>
        <label>Value for Price Difference</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_of_Discounts__c</fullName>
        <label>Value of Discounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost_Savings__c</fullName>
        <label>Variable Cost Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_Cost__c</fullName>
        <label>Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_was_this_solution_selected__c</fullName>
        <label>Why was this solution selected?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_Crew_Pass_ARGUS_or_Wyvern__c</fullName>
        <label>Will Crew Pass ARGUS or Wyvern?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Itinerary Solution</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trip_Manager_Number__c</columns>
        <columns>Quote__c</columns>
        <columns>Operator_Point_of_Contact__c</columns>
        <columns>Departure_Airport__c</columns>
        <columns>Arrival_Airport__c</columns>
        <columns>Operator__c</columns>
        <columns>Booked_Solution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{000000}</displayFormat>
        <label>Itinerary Solution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itinerary Solutions</pluralLabel>
    <recordTypes>
        <fullName>Not_Visible</fullName>
        <active>true</active>
        <description>Itinerary Solutions not visible to Community Users</description>
        <label>Not Visible</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visible</fullName>
        <active>true</active>
        <description>Itinerary Solutions that are visible to Community Users.</description>
        <label>Visible</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_change_record_type</fullName>
        <active>false</active>
        <description>You cannot change the record type for this Solution Status.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Visible&quot;, 
     OR(ISPICKVAL( Solution_Status__c , &quot;Available&quot;), 
        ISPICKVAL( Solution_Status__c, &quot;Unavailable&quot;),
        ISPICKVAL(Solution_Status__c, &quot;Requested&quot;),
        ISPICKVAL(Solution_Status__c, &quot;On Hold for Non-AvP Client&quot;))
)</errorConditionFormula>
        <errorDisplayField>Solution_Status__c</errorDisplayField>
        <errorMessage>You cannot change the record type for this Solution Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Aircraft_Confirmed_Wet_Runway</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Solution_Status__c  , &quot;Available&quot;), ISPICKVAL ( Solution_Category__c , &quot;Non-Guaranteed/Charter&quot;),
ISBLANK( TEXT( Operator_Confirmed_Aircraft__c  )))</errorConditionFormula>
        <errorDisplayField>Operator_Confirmed_Aircraft__c</errorDisplayField>
        <errorMessage>Please enter Operator Confirmed Aircraft Wet Runway</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Broker_Fee</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Solution_Status__c  , &quot;Available&quot;), ISPICKVAL ( Solution_Category__c , &quot;Non-Guaranteed/Charter&quot;), NOT(ISBLANK( Broker__c )),
ISBLANK(  Broker_Fee__c  ))</errorConditionFormula>
        <errorDisplayField>Broker_Fee__c</errorDisplayField>
        <errorMessage>Please enter Broker Fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Crew_Pass</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Solution_Status__c  , &quot;Available&quot;), ISPICKVAL ( Solution_Category__c , &quot;Non-Guaranteed/Charter&quot;),
ISBLANK(TEXT(  Will_Crew_Pass_ARGUS_or_Wyvern__c  )))</errorConditionFormula>
        <errorDisplayField>Will_Crew_Pass_ARGUS_or_Wyvern__c</errorDisplayField>
        <errorMessage>Please enter Will crew pass Argus or Wyvern</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Estimated_Billable_Time</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Solution_Status__c  , &quot;Available&quot;), ISPICKVAL ( Solution_Category__c , &quot;Non-Guaranteed/Charter&quot;),
ISBLANK(  Estimated_Billable_Time_hours__c  ))</errorConditionFormula>
        <errorDisplayField>Estimated_Billable_Time_hours__c</errorDisplayField>
        <errorMessage>Please enter estimated billable time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Estimated_Cost</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Solution_Status__c  , &quot;Available&quot;), ISPICKVAL ( Solution_Category__c , &quot;Non-Guaranteed/Charter&quot;),
ISBLANK( Estimated_Cost__c ))</errorConditionFormula>
        <errorDisplayField>Estimated_Cost__c</errorDisplayField>
        <errorMessage>Please enter estimated operator cost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Operator_Confirmed_Nonstop</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(  Solution_Status__c  , &quot;Available&quot;), ISPICKVAL ( Solution_Category__c , &quot;Non-Guaranteed/Charter&quot;),
ISBLANK( TEXT( Operator_Confirmed_Nonstop__c  )))</errorConditionFormula>
        <errorDisplayField>Operator_Confirmed_Nonstop__c</errorDisplayField>
        <errorMessage>Please enter Operator Confirmed Nonstop</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Selection_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Solution_Status__c , &quot;Booked&quot;), ISBLANK ( Why_was_this_solution_selected__c ))</errorConditionFormula>
        <errorDisplayField>Why_was_this_solution_selected__c</errorDisplayField>
        <errorMessage>Please enter reason for selecting this itinerary solution</errorMessage>
    </validationRules>
</CustomObject>